--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r ./build/* movie@130.193.51.14:/home/movie/movies-explorer-frontend"
+
   },
   "eslintConfig": {
     "extends": [
